samples/_failures_safe/1761594160_ee3443_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aed368da.c: In function ‘main’:
./samples/SAFE/__tmp_aed368da.c:141:25: error: missing terminating " character
  141 |         fprintf(stderr, "Decomp
      |                         ^~~~~~~
./samples/SAFE/__tmp_aed368da.c:141:9: error: expected expression at end of input
  141 |         fprintf(stderr, "Decomp
      |         ^~~~~~~
./samples/SAFE/__tmp_aed368da.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aed368da.c:141:9: error: expected declaration or statement at end of input
